Bug 58362 - crash when customize toolbar
Summary: crash when customize toolbar
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
4.0.0.0.alpha0+ Master
Hardware: x86 (IA32) Windows (All)
: high major
Assignee: David Tardon
URL:
Whiteboard: target:4.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-16 12:57 UTC by Regina Henschel
Modified: 2012-12-18 22:23 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
bt + console logs on master (7.95 KB, text/plain)
2012-12-16 13:54 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2012-12-16 12:57:43 UTC
With developer build
Version 4.1.0.0.alpha0+ (Build ID: 4b3161e238e643e1538d3eb36ebdac3eeba1cda)
I get an immediately crash, when I right click a toolbar and chose item "Customize".
Comment 1 Julien Nabet 2012-12-16 13:54:46 UTC
Created attachment 71585 [details]
bt + console logs on master

On pc Debian x86-64 with master sources updated today, I reproduced the problem.

I attached bt + console logs
Comment 2 Julien Nabet 2012-12-16 13:55:55 UTC
Noel/Stephan: I wonder if it could be due to: http://cgit.freedesktop.org/libreoffice/core/commit/?id=c1e42d60c572d23c61a703cd66495eab1cea4e05 (fdo#46808, use service constructor for ui::WindowStateConfiguration).
Would you have some to confirm?
Comment 3 Noel Grandin 2012-12-16 17:12:41 UTC
Yup, looks like I caused that one.
I'll have a look on Tuesday (Monday is a holiday here)
Comment 4 Not Assigned 2012-12-17 07:34:13 UTC
David Tardon committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=243630f394d5a332a7b214970b1f9924650f0255

fdo#58362 do not crash on customize toolbar



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Julien Nabet 2012-12-18 22:23:25 UTC
On pc Debian x86-64 with master sources updated today, I don't reproduce anymore this bug.
Thank you for the patch David!