fdo#58362 do not crash on customize toolbar

Change-Id: I7102a1635329b3bcdd3bf6bc250555cc71e0977e